--- a/index.html
+++ b/index.html
@@ -600,63 +600,9 @@
 <div id="contact" class="block grey-200 font-grey-800 flex align-center flex-column">
 
 	<style>
-
-		@font-face {
-			font-family: 'wtal';
-			src: url('dist/font/wtal.eot?67121696');
-			src: url('dist/font/wtal.eot?67121696#iefix') format('embedded-opentype'),
-			url('dist/font/wtal.woff?67121696') format('woff'),
-			url('dist/font/wtal.ttf?67121696') format('truetype'),
-			url('dist/font/wtal.svg?67121696#wtal') format('svg');
-			font-weight: normal;
-			font-style: normal;
-		}
-
-		@media screen and (-webkit-min-device-pixel-ratio:0) {
-			@font-face {
-				font-family: 'wtal';
-				src: url('dist/font/wtal.svg?67121696#wtal') format('svg');
-			}
-		}
-
-		[class^="icon-"]:before, [class*=" icon-"]:before {
-			display: inline-block;
-			font-family: "wtal";
-			font-style: normal;
-			font-variant: normal;
-			font-weight: normal;
-			margin-right: .2em;
-			speak: none;
-			text-align: center;
-			text-decoration: inherit;
-			text-transform: none;
-			width: 1em;
-			line-height: 1em;
-			margin-left: .2em;
-			-webkit-font-smoothing: antialiased;
-			-moz-osx-font-smoothing: grayscale;
-		}
-
-		.icon-mobile:before { content: '\e800'; } /* '' */
-		.icon-phone:before { content: '\e801'; } /* '' */
-		.icon-mail:before { content: '\e802'; } /* '' */
-		.icon-whatsapp:before { content: '\e803'; } /* '' */
-
 	</style>
 
-	<style>
-		h1,
-		h2 {
-			font-weight: 100;
-			margin: .5em 0 .5em;
-		}
-
-		* {
-			text-align: center;
-		}
-	</style>
-
-	<h1>Entre em contato</h1>
+	<h1 class="font-light-blue-a700">Entre em contato</h1>
 
 	<style>
 
@@ -664,37 +610,54 @@
 			padding: 3em 0 3.75em;
 		}
 
+		#contact h2 {
+			display: block;
+			font-size: 3.75em;
+			font-weight: 400;
+			margin-bottom: .75em;
+			line-height: 1.36;
+		}
+
+		#contact h3 {
+			font-size: 3em;
+			font-weight: 300;
+			line-height: 1.25;
+			margin-bottom: .875em;
+		}
+
 		.contacts {
-			margin: 1em 0 1.5em;
-			max-width: 48em;
+			margin: 3em 0 4.5em;
+			max-width: 60em;
 			width: 100%;
 		}
 
 		.contacts .contact {
 			border-radius: 8px;
-			min-width: 16em;
+			min-width: 14em;
+			margin: 0 0 1em;
 			padding: 1em 0;
 		}
 
 		.contacts .contact:hover {
 			background-color: #e0e0e0;
-			cursor: pointer;
+			cursor: default;
 		}
 
 		.contacts .contact span {
-			margin: .3125em 0;
+			margin: .375em 0;
 		}
 
-		.contacts .contact [class^="icon-"]:before {
-			border: solid 2px #00bfa5;
-			color: #00bfa5;
+		.contacts .contact .icon:before {
+			border: solid 2px #039be5;
+			color: #039be5;
 			border-radius: 50%;
+			margin: .5em 0;
 			font-size: 1.5em;
 			padding: 16px;
 		}
 
-		.contacts .contact:hover [class^="icon-"]:before {
-			background-color: #00bfa5;
+		.contacts .contact:hover .icon:before {
+			background-color: #039be5;
 			color: #ffffff;
 		}
 
@@ -714,28 +677,28 @@
 
 	<div class="contacts flex flex-row flex-wrap justify-around width-100">
 		<div class="contact flex flex-column align-center">
-			<span class="icon-phone"></span>
+			<span class="icon icon-phone"></span>
 			<span class="number">18 3421 2000</span>
 			<span class="title">Assis</span>
 		</div>
 		<a href="mailto:webtal@webtal.com.br" class="contact flex flex-column align-center">
-			<span class="icon-phone"></span>
+			<span class="icon icon-phone"></span>
 			<span class="email">18 3351 9500</span>
 			<span class="title">Palmital</span>
 		</a>
 		<div class="contact flex flex-column align-center">
-			<span class="icon-phone"></span>
+			<span class="icon icon-phone"></span>
 			<span class="number">11 2626 3000</span>
 			<span class="title">São Paulo</span>
 		</div>
 		<div class="contact flex flex-column align-center">
-			<span class="icon-phone"></span>
+			<span class="icon icon-phone"></span>
 			<span class="number">0800 722 7998</span>
 			<span class="title">Demais localidades</span>
 		</div>
 	</div>
 
-	<h2>Horários de atendimento</h2>
+	<h3>Horários de atendimento</h3>
 
 	<style scoped="scoped">
 
